--- a/plugin.xml
+++ b/plugin.xml
@@ -30,8 +30,9 @@
     <issue>https://github.com/apache/cordova-plugin-camera/issues</issue>
 
     <engines>
-        <engine name="cordova" version=">=7.1.0"/>
-        <engine name="cordova-android" version=">=6.3.0" />
+        <engine name="cordova" version=">=9" />
+		<engine name="cordova-android" version=">=8" />
+		<engine name="cordova-ios" version=">=5" />
     </engines>
 
     <js-module src="www/CameraConstants.js" name="Camera">
